Deleted unnecessary lines for code for style.css and made the webpage mobile responsive

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <div class="container-items" name="8"></div>
             <div class="container-items" name="9"></div>
         </div>
-        <div id="result">
-            <!-- <a href="#" class="button">Restart?</a> -->
-        </div>
+        <div id="result"></div>
     </main>
 </body>
 
